[package]
name = "anisub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = { version = "5.1.1" }
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
ffmpeg-sys-next = "5.1.1"
walkdir = "2.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
indicatif = "0.17.3"
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'
